[package]
name = "my_nft"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
pop-api = { git = "https://github.com/r0gue-io/pop-node.git" }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
enumflags2 = { version = "0.7.7" }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pop-api/std",
    "scale/std",
    "scale-info/std",
    "enumflags2/std",
]
ink-as-dependency = []
e2e-tests = []
