[package]
name = "nfts"
version = "0.1.0"
authors = ["[Bruno Galvao] <[bruno@r0gue.io]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
pop-api = { git = "https://github.com/r0gue-io/pop-node.git", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pop-api/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
